# rle-parser

./: .clang  .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: Board.h  Parser.h  Utils.h
src/: Board.cc  CMakeLists.txt  Parser.cc  Utils.cc
tests/: CMakeLists.txt  Config.h.in  TestParsing.cc
